--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="PretConnect Financial"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=pretconnect_financial
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -34,7 +34,7 @@ MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="hello@pretconnect.financial"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -51,9 +51,25 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
-VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# PretConnect Financial Configuration
+COMPANY_NAME="PretConnect Financial"
+COMPANY_EMAIL="support@pretconnect.financial"
+COMPANY_PHONE="+33 1 23 45 67 89"
+COMPANY_ADDRESS="123 Financial Street, Paris, France"
+
+# Investment Configuration
+MIN_INVESTMENT=50
+MAX_INVESTMENT=50000
+REFERRAL_COMMISSION_RATE=10
+TEAM_BONUS_THRESHOLD=1000
+WITHDRAWAL_MIN_AMOUNT=20
+
+# Security
+SESSION_SECURE_COOKIE=false
+SANCTUM_STATEFUL_DOMAINS=localhost:8000
